[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=65.5.0", "wheel"]

[project]
authors = [{name = "Enoch Adesanya", email = "adesanyaenoch@gmail.com"}]
dependencies = [
  "click >= 8.1.3",
]
description = "Find files on your Android phones and tablets"
name = "mtp_explorer"
readme = "README.md"
version = "0.0.1"

[project.scripts]
sorter = "anime_sorter.__main__:cli"
